--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
                   <div class="nav-items">
                     <ul>
-                      <li><a href="home.html"> Home </a></li>
+                      <li><a href="index.html"> Home </a></li>
                       <li><a href="aboutme.html"> About </a></li>
                       <li><a href="project.html"> Works </a></li>
                       <li><a href="contact.html"> Contact </a></li>
@@ -27,7 +27,7 @@
                 <div id="mobile-menu">
                   <div class="mobile-nav-items">
                     <ul>
-                      <li><a href="home.html"> Home </a></li>
+                      <li><a href="index.html"> Home </a></li>
                       <li><a href="aboutme.html"> About </a></li>
                       <li><a href="project.html"> Works </a></li>
                       <li><a href="contact.html"> Contact </a></li>
