--- a/project.html
+++ b/project.html
@@ -26,22 +26,10 @@
               </button>
   </div>
   <div class="work-card"> 
-    <h5>Learn 101</h5>
-    <p id="p-tool">Figma</p>
-    <p id="p-id">A Mock up design for an children learning app that <br>
-          teaches young kids about computer</p>
-          <button id="b-card">             
-             <a href="https://www.figma.com/proto/fIjnjl9IseWdyBh7PG7HZE/LEARN-101-%7C-PROTOTYPE?type=design&node-id=1-2&t=rhYf31l0vqj6hSmB-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2&mode=design">Visit</a>
-          </button></div>
+   
   <div class="work-card hidden">
-    <h5>Learn 101</h5>
-    <p id="p-tool">Figma</p>
-    <p id="p-id">A Mock up design for an children learning app that <br>
-          teaches young kids about computer</p>
-          <button id="b-card">             
-             <a href="https://www.figma.com/proto/fIjnjl9IseWdyBh7PG7HZE/LEARN-101-%7C-PROTOTYPE?type=design&node-id=1-2&t=rhYf31l0vqj6hSmB-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2&mode=design">Visit</a>
-          </button></div>
-  <div class="work-card hidden">Work 4</div>
+ </div>
+  <div class="work-card hidden"></div>
   <!-- Add more work cards as needed -->
 </div>
 
