--- a/index.html
+++ b/index.html
@@ -78,8 +78,12 @@
                  
                  </div>
                  <div class="soc-con">
-                  <div id="img"><img src="images/mdi_github.png"></div>
-                  <div id="img"><img src="images/mage_behance.png"></div>
+                  <div id="img">
+                      <a href="https://github.com/mchaelacrb" target="_blank">
+                      <img src="images/mdi_github.png"></div>
+                  <div id="img">
+                      <a href="https://www.behance.net/mechacuriba" target="_blank">
+                      <img src="images/mage_behance.png"></div>
                   <div id="img"><img src="images/mdi_linkedin.png"></div>
                   <a href="project.html">My Works</a>
                
