--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
                  <div class="soc-con">
                   <div id="img">
                       <a href="https://github.com/mchaelacrb" target="_blank">
-                      <img src="images/mdi_github.png"></div> 
+                      <img src="images/mdi_github.png"> 
                  </a>
+                      </div>
                   <div id="img">
                       <a href="https://www.behance.net/mechacuriba" target="_blank">
-                      <img src="images/mage_behance.png"></div>
+                      <img src="images/mage_behance.png">
+                          </div>
                   </a>
                   <div id="img"><img src="images/mdi_linkedin.png"></div>
                   <a href="project.html">My Works</a>
