--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
   
     <div id="project-card"> 
       <div id="project-title">
-      <h5>Featured <br> Projects ✨</h5>
+      <h5>Featured <br> Under Development 🚧</h5>
     </div>
 /*   
    <div class="works-section">
