--- a/project.html
+++ b/project.html
@@ -12,10 +12,10 @@
   
     <div id="project-card"> 
       <div id="project-title">
-      <h5>Featured <br> Under Development 🚧</h5>
+      <h5> Sorry ! <br> Under Development 🚧</h5>
     </div>
-/*   
-   <div class="works-section">
+<!--
+        <div class="works-section">
   <div class="work-card">
     <h5>Learn 101</h5>
         <p id="p-tool">Figma</p>
@@ -30,7 +30,7 @@
   <div class="work-card hidden">
  </div>
   <div class="work-card hidden"></div>
-  <!-- Add more work cards as needed -->
+ 
 </div>
 
 <div class="see-more" id="see-more" onclick="toggleCards()">See More</div>
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-*/
+-->
 
   </section>
     </body>
